examples/invalid/example12_duplicate_param_name.py
def is_equal(a: int, a: int) -> bool:
    return a == a
